syntax = "proto3";

package NUgc.NSchema.NAfisha;

import "kernel/ugc/proto/common/moderation.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

message TAfishaObject {
    string Id = 1;
    string FeedbackId = 2;

    // rating
    google.protobuf.UInt32Value RatingOverall = 3;
    google.protobuf.Timestamp RatingTime = 4;
    google.protobuf.StringValue RatingAppType = 5;

    // review
    google.protobuf.StringValue ReviewOverall = 6;
    google.protobuf.Timestamp ReviewTime = 7;
    google.protobuf.StringValue ReviewAppType = 8;

    google.protobuf.StringValue LastAppType = 9;

    google.protobuf.BoolValue NotInterested = 10;

    // moderation and antifraud
    string ModeratedFeedbackId = 11;
    TModerationStatus.EType ModerationStatus = 12;
    repeated TModerationReason.EType ModerationReason = 13;
    google.protobuf.Timestamp ModerationTime = 14;
    google.protobuf.StringValue ModeratedReviewOverall = 15;
    bool Fraud = 16;
    bool Hidden = 17;
    string HiddenReason = 18;
}
