syntax = "proto3";

package NUgc.NSchema.NWeather;

import "google/protobuf/timestamp.proto";

// Saved location for Weather.
// Next field: 13
message TLocation {
    // UUID of the location.
    string Id = 1;
    // Textual title of the location.
    string Title = 2;
    // Piority of display.
    int32 Order = 3;

    // Geo id.
    int64 PlaceId = 4;
    // Geocoder id.
    int64 GeocoderId = 5;
    // Suggest categorization.
    string PlaceKind = 6;
    // Search categorization.
    string PlaceType = 7;
    // Latitude in degrees.
    double Latitude = 8;
    // Longitude in degrees.
    double Longitude = 9;

    // Time of last update.
    google.protobuf.Timestamp UpdateTime = 10;
    // Soft delete.
    bool Deleted = 11;
    // Deletion time.
    google.protobuf.Timestamp DeleteTime = 12;
}
